# ara-explore

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
ara/: __init__.py  version.py
tests/: test_basic.py
